--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^6.0.10",
+    "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.13"
   }
 }
