--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^6.0.10",
     "mongoose-unique-validator": "^3.0.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.14",
+    "update": "^0.7.4"
   }
 }
